--- a/BLOG BOOTSRSP/index.html
+++ b/BLOG BOOTSRSP/index.html
@@ -56,7 +56,7 @@
                   <div class="row">
                     <div class="col">
                       <br><br><br>
-                      <p class="text-left">&emsp; &emsp;  Bu siteyi yapma amacım hem web sitesi hakkında kendimi geliştirmek hemde yaptığım projeleri, yayınladığım videoları sizlerle paylaşmak</p>
+                      <p class="text-left">&emsp; &emsp;  Bu siteyi yapma amacım yok</p>
                       <br>
                       <p class="text-left">İlginiz için teşekkür ederim...</p><br><br>
                     </div>
