--- a/BLOG BOOTSRSP/index.html
+++ b/BLOG BOOTSRSP/index.html
@@ -46,8 +46,8 @@
 
                           <!---------------------------------------------------------------------------------------------------------------------------------------------------->
             </div>
-                       
-            <div class="col-sm-9   border ">
+                     fdsalfşdskafişds  
+            <!-- <div class="col-sm-9   border ">
                 <div class="text-center"><img class=" rounded-3 mt-3 img-fluid " src="images_files/günbatımı.png" alt="Resim"  width="700px"></div>
                 <p class="text-center text-sm-center text-fluid h5 mt-4">Kimseye kendinizi anlatmak için uğraşmayın,</p>
                 <p class="text-center text-fluid h2 text-sm-center">herkes sizi kendi işine geldiği gibi görür.</p>
@@ -63,7 +63,7 @@
                   </div>
                 </div>
 
-            </div>
+            </div> -->
         </div>
     </div>
 
